--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <!-- <packaging>jar</packaging> -->
   <packaging>war</packaging>
   
-  <name>myTest</name>
+  <name>Test</name>
   <url>http://maven.apache.org</url>
   
   <repositories>
